tweaks, body spacing fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,6 +13,12 @@ a {
   }
 }
 
+header {
+  background-image: url(http://placehold.it/1750x550);
+  background-size: cover;
+  height: 350px;
+}
+
 nav.navbar {
   background: transparent;
   position: absolute;
